@startuml worker_class

skinparam defaultFontSize 18

hide empty members

enum UserRole {
  Admin
  Client
  Worker
}

class DB {
  + bool complete_order(order_id, description)
  + bool update_order_executor(order_id, executor_id)
  + int get_worker_orders_count(user_id)
  + User get_user(login)
  + Machine get_machine(machine_id)
  + Date get_last_repair_date(machine_id)
  + Order get_order(order_id)
  + Machine get_machine_by_order(order_id)
  + List[Order] get_active_orders(user_id)
  + List[Order] get_aviable_orders(user_id)
  + List[Order] get_machine_orders(machine_id)
}

class AuthWindow {
  + User check_auth(login, password)
  + on_auth_button_clicked()
  + open_user_window(role, user_id)
}
 
Entity User
Entity Machine
Entity Order

class WorkerAreaWindow {
  + WorkerAreaWindow(user_id)
  + on_aviable_orders_list_button_clicked()
  + on_active_orders_list_button_clicked()
  + on_exit_button_clicked()
}

class AviableOrdersListWindow {
  + AviableOrdersListWindow(user_id)
  + on_take_order_button_clicked()
  + on_about_button_clicked()
  + on_go_area_button_clicked()
  --
  * List[Order] orders
}

class ActiveOrdersListWindow {
  + ActiveOrdersListWindow(user_id)
  + on_complete_order_button_clicked()
  + on_about_button_clicked()
  + on_go_area_button_clicked()
  --
  * List[Order] orders
}

class CompleteOrderWindow {
  + CompleteOrderWindow(user_id, order_id)
  + static validate_description(description)
  + on_complete_order_button_clicked()
  + on_go_area_button_clicked()
  --
  * order_id
}

class ConfirmationDialog {
  + accept()
  + reject()
}

class AboutOrderWindow {
  + AboutOrderWindow(user_id, order_id)
  + hide_description()
  + on_about_machine_button_clicked()
  + on_go_area_button_clicked()
  --
  * order
}

class AboutMachineWindow {
  + AboutMachineWindow(user_id, machine_id)
  + on_order_button_clicked()
  + on_go_area_button_clicked()
  --
  * machine_id
}

class ListRepairsMachineWindow {
  + ListRepairsMachineWindow(user_id, machine_id)
  + on_about_button_clicked()
  + on_go_area_button_clicked()
  --
  * List[Order] orders
}


AuthWindow --> DB
DB --> User
DB --> Machine
DB --> Order
AuthWindow --> UserRole
AuthWindow <--> WorkerAreaWindow
WorkerAreaWindow <--> AviableOrdersListWindow
WorkerAreaWindow <--> ActiveOrdersListWindow
AboutMachineWindow --> WorkerAreaWindow
AviableOrdersListWindow --> AboutOrderWindow
ActiveOrdersListWindow --> AboutOrderWindow
AboutOrderWindow --> WorkerAreaWindow
AboutOrderWindow --> AboutMachineWindow
AboutMachineWindow --> ListRepairsMachineWindow
ListRepairsMachineWindow --> WorkerAreaWindow
ListRepairsMachineWindow --> AboutOrderWindow
ListRepairsMachineWindow --> CompleteOrderWindow
CompleteOrderWindow --> WorkerAreaWindow
CompleteOrderWindow <--> ConfirmationDialog
AviableOrdersListWindow --> DB
ActiveOrdersListWindow --> DB
CompleteOrderWindow --> DB
AboutMachineWindow --> DB
AboutOrderWindow --> DB
ListRepairsMachineWindow --> DB

@enduml